<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Being_mem">You Must be member to Login</string>
    <string name="Welcome">Welcome!</string>
    <string name="Nice_To_see_you">Nice to see you again</string>
    <string name="Login">Login</string>
    <string name="Email">Email Address</string>
    <string name="Password">Password</string>
    <string name="Need_Help">Need Help?</string>
    <string name="Hello">Hello There!</string>
    <string name="Loading">Loading...</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>

    <string name="ChangePass">Change Pass</string>
    <string name="NewPass">New Password</string>
    <string name="OldPass">Old Password</string>
    <string name="Submit">Submit</string>
    <string name="app_name">Cast demo</string>

    <string name="load_active_msg">Loading video params…</string>
    <string name="load_done_msg"> </string>
    <string name="load_error_msg">Error loading video params.\nTap to retry</string>

    <string name="vdo_cast_notification_target_activity">com.vdocipher.sampleapp.castdemo.CastVdoPlayerActivity</string>

</resources>