<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ChangePass">


    <EditText
        android:id="@+id/Email"
        android:layout_width="310dp"
        android:layout_height="50sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        android:textColorHint="@color/gary"
        app:layout_constraintBottom_toTopOf="@+id/OldPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.895" />

    <EditText
        android:id="@+id/OldPassword"
        android:layout_width="310dp"
        android:layout_height="50sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="508dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/OldPass"
        android:inputType="textPassword"
        android:textColorHint="@color/gary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/NewPassword"
        android:layout_width="310dp"
        android:layout_height="50sp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/NewPass"
        android:inputType="textPassword"
        android:textColorHint="@color/gary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OldPassword" />

    <Button
        android:id="@+id/submit"
        android:layout_width="162dp"
        android:layout_height="53dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="372dp"
        android:background="@drawable/button"
        android:text="@string/Submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password"
        app:layout_constraintVertical_bias="0.42" />

    <TextView
        android:id="@+id/Change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ChangePass"
        android:textColor="@color/gary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312" />


</androidx.constraintlayout.widget.ConstraintLayout>